# Autonomous-Exploration-using-Submap-Collection

./: README.md  active_3d_planning_app_submap_exploration.rosinstall
active_3d_planning_app_submap_exploration/: CMakeLists.txt  package.xml
active_3d_planning_app_submap_exploration/cfg/experiments/: experiment_visualization.rviz
active_3d_planning_app_submap_exploration/cfg/planners/: global_local_planner_RRTStar.yaml  local_planner_RRTStar.yaml  local_planner_example_config.yaml  naive_voxgraph_exploration_planner.yaml
active_3d_planning_app_submap_exploration/cfg/voxgraph/: odometry_simulator.yaml  voxgraph_params.yaml  voxgraph_params_drift.yaml  voxgraph_params_sensor.yaml
active_3d_planning_app_submap_exploration/include/active_3d_planning_app_submap_exploration/global_point_selector/: global_point_selector.h
active_3d_planning_app_submap_exploration/include/active_3d_planning_app_submap_exploration/global_point_selector/global_frontier_selector/: biggest_frontier_selector.h
active_3d_planning_app_submap_exploration/include/active_3d_planning_app_submap_exploration/module/global_point_selector/: global_point_selector.h
active_3d_planning_app_submap_exploration/include/active_3d_planning_app_submap_exploration/module/sensor_model/: iterative_ray_caster_voxgraph.h
active_3d_planning_app_submap_exploration/include/active_3d_planning_app_submap_exploration/module/trajectory_evaluator/: loop_closure_evaluator.h  naive_evaluator_voxgraph.h  voxel_weight_evaluator_voxgraph.h
active_3d_planning_app_submap_exploration/include/active_3d_planning_app_submap_exploration/module/trajectory_generator/: rrt_star_voxgraph.h
active_3d_planning_app_submap_exploration/include/active_3d_planning_app_submap_exploration/planner/: global_local_planner_I.h  naive_voxgraph_exploration_planner.h  submap_exploration_planner.h  voxgraph_local_planner.h
active_3d_planning_app_submap_exploration/include/active_3d_planning_app_submap_exploration/tools/: transformations.h
active_3d_planning_app_submap_exploration/launch/: RH_NBV_planner_voxblox.launch  eval_data.launch  global_local_planner.launch  global_local_planner_real.launch  local_planner.launch  long_loop.launch  naive_voxgraph_exploration_planner.launch  naive_voxgraph_exploration_planner_run.launch  naive_voxgraph_exploration_planner_with_GT_evaluation.launch  naive_voxgraph_exploration_planner_with_drift.launch  plot_experiment_series.launch  rosbag_play.launch  submap_exploration_planner.launch  submap_exploration_planner_run.launch  submap_exploration_planner_with_GT_evaluation.launch  submap_exploration_planner_with_drift.launch  submap_exploration_planner_with_drift_and_evaluation.launch  voxgraph_local_planner.launch
active_3d_planning_app_submap_exploration/scripts/: naive_voxgraph_planner_series.sh  run_experiment_series.sh  submap_exploration_planner_series.sh  voxblox_planner.sh  voxgraph_local_planner_series.sh
active_3d_planning_app_submap_exploration/src/: naive_voxgraph_exploration_planner_node.cpp  submap_exploration_planner_node.cpp  voxgraph_local_planner_node.cpp
active_3d_planning_app_submap_exploration/src/experiments/: arrow.py  distance_run_node.cpp  eval_data_node.py  odom_difference.py  odom_difference_plot.py  plot_data_node.py  plot_series.py  voxgraph_node_evaluator.cpp
active_3d_planning_app_submap_exploration/src/global_point_selector/: global_point_selector.cpp
active_3d_planning_app_submap_exploration/src/global_point_selector/global_frontier_selector/: biggest_frontier_selector.cpp
active_3d_planning_app_submap_exploration/src/global_point_selector/global_frontier_selector/submap_frontier_evaluator/: frontier.cpp  submap_frontier_evaluator.cpp  submap_frontiers.cpp
active_3d_planning_app_submap_exploration/src/module/global_point_selector/: global_point_selector.cpp
active_3d_planning_app_submap_exploration/src/module/global_point_selector/global_frontier_selector/: biggest_frontier_selector.cpp  (+5 more)
active_3d_planning_app_submap_exploration/src/module/sensor_model/: iterative_ray_caster_voxgraph.cpp
active_3d_planning_app_submap_exploration/src/module/trajectory_evaluator/: loop_closure_evaluator.cpp  naive_evaluator_voxgraph.cpp  voxel_weight_evaluator.cpp  voxel_weight_evaluator_voxgraph.cpp
active_3d_planning_app_submap_exploration/src/module/trajectory_generator/: rrt_star_voxgraph.cpp
active_3d_planning_app_submap_exploration/src/planner/: naive_voxgraph_exploration_planner.cpp  submap_exploration_planner.cpp  voxgraph_local_planner.cpp
active_3d_planning_app_submap_exploration/src/tools/: transformations.cpp
active_3d_planning_naive_voxgraph/: CMakeLists.txt
active_3d_planning_naive_voxgraph/include/active_3d_planning_naive_voxgraph/initialization/: naive_voxgraph_map_package.h
active_3d_planning_naive_voxgraph/include/active_3d_planning_naive_voxgraph/map/: naive_voxgraph_map.h
active_3d_planning_naive_voxgraph/src/initialization/: naive_voxgraph_map_package.cpp
active_3d_planning_naive_voxgraph/src/map/: naive_voxgraph_map.cpp
active_3d_planning_safe_voxgraph/: CMakeLists.txt  package.xml
active_3d_planning_safe_voxgraph/include/active_3d_planning_safe_voxgraph/initialization/: safe_voxgraph_package.h
active_3d_planning_safe_voxgraph/include/active_3d_planning_safe_voxgraph/map/: safe_voxgraph.h
active_3d_planning_safe_voxgraph/src/initialization/: safe_voxgraph_package.cpp
active_3d_planning_safe_voxgraph/src/map/: safe_voxgraph.cpp
active_3d_planning_voxgraph/: CMakeLists.txt
active_3d_planning_voxgraph/include/active_3d_planning_voxgraph/initialization/: voxgraph_package.h
active_3d_planning_voxgraph/include/active_3d_planning_voxgraph/map/: voxgraph.h
active_3d_planning_voxgraph/include/active_3d_planning_voxgraph/planner_map_manager/: planner_map_manager.h
active_3d_planning_voxgraph/src/initialization/: voxgraph_package.cpp
active_3d_planning_voxgraph/src/map/: voxgraph.cpp
active_3d_planning_voxgraph/src/planner_map_manager/: planner_map_manager.cpp
active_3d_planning_voxgraph/src/planner_map_manager/tools/: merge_layer.cpp
(+35 files in other folders)
